# trustpilotGPT

./: .gitignore  .replit  README.md  chat.py  frontend.py  llm.py  pyproject.toml  query.py  replit.nix  sandbox.ipynb  sandbox.py  setup.py  utils.py
assistant/: agents.py  analyse.py  chat.py  config.py  llm.py  plot.py  query.py
assistant/db/: crud.py  db.py  models.py
assistant/funcs/: data.py  plot.py  utils.py
db/: crud.py  db.py  models.py
funcs/: CONSTANTS.py  data.py  plot.py
scripts/: trustpilot_scraping.py
