[tool.poetry]
name = "sdc-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "0.0.8"
pandas = "2.0.3"
openai = "0.27.8"
wandb = "0.15.8"
tiktoken = "0.4.0"
plotly = "5.16.1"
streamlit = "1.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
